Código_Fuente/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    FALSE
    TRUE
    VOID

Grammar

Rule 0     S' -> program
Rule 1     program -> BEGIN statement_list END
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> declaration
Rule 5     statement -> assignment_expression SEMICOLON
Rule 6     statement -> if_statement
Rule 7     statement -> for_statement
Rule 8     statement -> parking_command
Rule 9     statement -> return_statement
Rule 10    statement -> print_statement
Rule 11    statement -> SEMICOLON
Rule 12    declaration -> type_specifier IDENTIFIER SEMICOLON
Rule 13    type_specifier -> INT
Rule 14    type_specifier -> FLOAT
Rule 15    type_specifier -> BOOLEAN
Rule 16    type_specifier -> STRING
Rule 17    assignment_expression -> IDENTIFIER EQUALS expression
Rule 18    if_statement -> IF LPAREN expression RPAREN compound_statement
Rule 19    if_statement -> IF LPAREN expression RPAREN compound_statement ELSE compound_statement
Rule 20    for_statement -> FOR LPAREN assignment_expression_opt expression_opt SEMICOLON assignment_expression_opt RPAREN compound_statement
Rule 21    expression_opt -> expression
Rule 22    expression_opt -> empty
Rule 23    assignment_expression_opt -> assignment_expression
Rule 24    assignment_expression_opt -> empty
Rule 25    empty -> <empty>
Rule 26    parking_command -> GATE OPEN SEMICOLON
Rule 27    parking_command -> GATE CLOSE SEMICOLON
Rule 28    parking_command -> ONOFF SEMICOLON
Rule 29    parking_command -> PARK SEMICOLON
Rule 30    parking_command -> EXIT SEMICOLON
Rule 31    parking_command -> SENSOR SEMICOLON
Rule 32    return_statement -> RETURN expression SEMICOLON
Rule 33    print_statement -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 34    expression -> additive_expression
Rule 35    expression -> relational_expression
Rule 36    expression -> BOOLEAN_LITERAL
Rule 37    expression -> STRING_LITERAL
Rule 38    relational_expression -> additive_expression relational_op additive_expression
Rule 39    relational_op -> LT
Rule 40    relational_op -> LE
Rule 41    relational_op -> GT
Rule 42    relational_op -> GE
Rule 43    relational_op -> EQ
Rule 44    relational_op -> NE
Rule 45    additive_expression -> multiplicative_expression
Rule 46    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 47    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 48    multiplicative_expression -> primary_expression
Rule 49    multiplicative_expression -> multiplicative_expression TIMES primary_expression
Rule 50    multiplicative_expression -> multiplicative_expression DIVIDE primary_expression
Rule 51    primary_expression -> IDENTIFIER
Rule 52    primary_expression -> NUMBER
Rule 53    primary_expression -> FLOAT_NUMBER
Rule 54    primary_expression -> BOOLEAN_LITERAL
Rule 55    primary_expression -> STRING_LITERAL
Rule 56    primary_expression -> LPAREN expression RPAREN
Rule 57    compound_statement -> LBRACE statement_list RBRACE

Terminals, with rules where they appear

BEGIN                : 1
BOOLEAN              : 15
BOOLEAN_LITERAL      : 36 54
CLOSE                : 27
COMMENT              : 
DIVIDE               : 50
ELSE                 : 19
END                  : 1
EQ                   : 43
EQUALS               : 17
EXIT                 : 30
FALSE                : 
FLOAT                : 14
FLOAT_NUMBER         : 53
FOR                  : 20
GATE                 : 26 27
GE                   : 42
GT                   : 41
IDENTIFIER           : 12 17 51
IF                   : 18 19
INT                  : 13
LBRACE               : 57
LE                   : 40
LPAREN               : 18 19 20 33 56
LT                   : 39
MINUS                : 47
NE                   : 44
NUMBER               : 52
ONOFF                : 28
OPEN                 : 26
PARK                 : 29
PLUS                 : 46
PRINT                : 33
RBRACE               : 57
RETURN               : 32
RPAREN               : 18 19 20 33 56
SEMICOLON            : 5 11 12 20 26 27 28 29 30 31 32 33
SENSOR               : 31
STRING               : 16
STRING_LITERAL       : 37 55
TIMES                : 49
TRUE                 : 
VOID                 : 
error                : 

Nonterminals, with rules where they appear

additive_expression  : 34 38 38 46 47
assignment_expression : 5 23
assignment_expression_opt : 20 20
compound_statement   : 18 19 19 20
declaration          : 4
empty                : 22 24
expression           : 17 18 19 21 32 33 56
expression_opt       : 20
for_statement        : 7
if_statement         : 6
multiplicative_expression : 45 46 47 49 50
parking_command      : 8
primary_expression   : 48 49 50
print_statement      : 10
program              : 0
relational_expression : 35
relational_op        : 38
return_statement     : 9
statement            : 2 3
statement_list       : 1 2 57
type_specifier       : 12

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . BEGIN statement_list END

    BEGIN           shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> BEGIN . statement_list END
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . declaration
    (5) statement -> . assignment_expression SEMICOLON
    (6) statement -> . if_statement
    (7) statement -> . for_statement
    (8) statement -> . parking_command
    (9) statement -> . return_statement
    (10) statement -> . print_statement
    (11) statement -> . SEMICOLON
    (12) declaration -> . type_specifier IDENTIFIER SEMICOLON
    (17) assignment_expression -> . IDENTIFIER EQUALS expression
    (18) if_statement -> . IF LPAREN expression RPAREN compound_statement
    (19) if_statement -> . IF LPAREN expression RPAREN compound_statement ELSE compound_statement
    (20) for_statement -> . FOR LPAREN assignment_expression_opt expression_opt SEMICOLON assignment_expression_opt RPAREN compound_statement
    (26) parking_command -> . GATE OPEN SEMICOLON
    (27) parking_command -> . GATE CLOSE SEMICOLON
    (28) parking_command -> . ONOFF SEMICOLON
    (29) parking_command -> . PARK SEMICOLON
    (30) parking_command -> . EXIT SEMICOLON
    (31) parking_command -> . SENSOR SEMICOLON
    (32) return_statement -> . RETURN expression SEMICOLON
    (33) print_statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (13) type_specifier -> . INT
    (14) type_specifier -> . FLOAT
    (15) type_specifier -> . BOOLEAN
    (16) type_specifier -> . STRING

    SEMICOLON       shift and go to state 7
    IDENTIFIER      shift and go to state 14
    IF              shift and go to state 15
    FOR             shift and go to state 16
    GATE            shift and go to state 17
    ONOFF           shift and go to state 18
    PARK            shift and go to state 19
    EXIT            shift and go to state 20
    SENSOR          shift and go to state 21
    RETURN          shift and go to state 22
    PRINT           shift and go to state 23
    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    BOOLEAN         shift and go to state 26
    STRING          shift and go to state 27

    statement_list                 shift and go to state 3
    statement                      shift and go to state 4
    declaration                    shift and go to state 5
    assignment_expression          shift and go to state 6
    if_statement                   shift and go to state 8
    for_statement                  shift and go to state 9
    parking_command                shift and go to state 10
    return_statement               shift and go to state 11
    print_statement                shift and go to state 12
    type_specifier                 shift and go to state 13

state 3

    (1) program -> BEGIN statement_list . END
    (2) statement_list -> statement_list . statement
    (4) statement -> . declaration
    (5) statement -> . assignment_expression SEMICOLON
    (6) statement -> . if_statement
    (7) statement -> . for_statement
    (8) statement -> . parking_command
    (9) statement -> . return_statement
    (10) statement -> . print_statement
    (11) statement -> . SEMICOLON
    (12) declaration -> . type_specifier IDENTIFIER SEMICOLON
    (17) assignment_expression -> . IDENTIFIER EQUALS expression
    (18) if_statement -> . IF LPAREN expression RPAREN compound_statement
    (19) if_statement -> . IF LPAREN expression RPAREN compound_statement ELSE compound_statement
    (20) for_statement -> . FOR LPAREN assignment_expression_opt expression_opt SEMICOLON assignment_expression_opt RPAREN compound_statement
    (26) parking_command -> . GATE OPEN SEMICOLON
    (27) parking_command -> . GATE CLOSE SEMICOLON
    (28) parking_command -> . ONOFF SEMICOLON
    (29) parking_command -> . PARK SEMICOLON
    (30) parking_command -> . EXIT SEMICOLON
    (31) parking_command -> . SENSOR SEMICOLON
    (32) return_statement -> . RETURN expression SEMICOLON
    (33) print_statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (13) type_specifier -> . INT
    (14) type_specifier -> . FLOAT
    (15) type_specifier -> . BOOLEAN
    (16) type_specifier -> . STRING

    END             shift and go to state 28
    SEMICOLON       shift and go to state 7
    IDENTIFIER      shift and go to state 14
    IF              shift and go to state 15
    FOR             shift and go to state 16
    GATE            shift and go to state 17
    ONOFF           shift and go to state 18
    PARK            shift and go to state 19
    EXIT            shift and go to state 20
    SENSOR          shift and go to state 21
    RETURN          shift and go to state 22
    PRINT           shift and go to state 23
    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    BOOLEAN         shift and go to state 26
    STRING          shift and go to state 27

    statement                      shift and go to state 29
    declaration                    shift and go to state 5
    assignment_expression          shift and go to state 6
    if_statement                   shift and go to state 8
    for_statement                  shift and go to state 9
    parking_command                shift and go to state 10
    return_statement               shift and go to state 11
    print_statement                shift and go to state 12
    type_specifier                 shift and go to state 13

state 4

    (3) statement_list -> statement .

    END             reduce using rule 3 (statement_list -> statement .)
    SEMICOLON       reduce using rule 3 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 3 (statement_list -> statement .)
    IF              reduce using rule 3 (statement_list -> statement .)
    FOR             reduce using rule 3 (statement_list -> statement .)
    GATE            reduce using rule 3 (statement_list -> statement .)
    ONOFF           reduce using rule 3 (statement_list -> statement .)
    PARK            reduce using rule 3 (statement_list -> statement .)
    EXIT            reduce using rule 3 (statement_list -> statement .)
    SENSOR          reduce using rule 3 (statement_list -> statement .)
    RETURN          reduce using rule 3 (statement_list -> statement .)
    PRINT           reduce using rule 3 (statement_list -> statement .)
    INT             reduce using rule 3 (statement_list -> statement .)
    FLOAT           reduce using rule 3 (statement_list -> statement .)
    BOOLEAN         reduce using rule 3 (statement_list -> statement .)
    STRING          reduce using rule 3 (statement_list -> statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement .)


state 5

    (4) statement -> declaration .

    END             reduce using rule 4 (statement -> declaration .)
    SEMICOLON       reduce using rule 4 (statement -> declaration .)
    IDENTIFIER      reduce using rule 4 (statement -> declaration .)
    IF              reduce using rule 4 (statement -> declaration .)
    FOR             reduce using rule 4 (statement -> declaration .)
    GATE            reduce using rule 4 (statement -> declaration .)
    ONOFF           reduce using rule 4 (statement -> declaration .)
    PARK            reduce using rule 4 (statement -> declaration .)
    EXIT            reduce using rule 4 (statement -> declaration .)
    SENSOR          reduce using rule 4 (statement -> declaration .)
    RETURN          reduce using rule 4 (statement -> declaration .)
    PRINT           reduce using rule 4 (statement -> declaration .)
    INT             reduce using rule 4 (statement -> declaration .)
    FLOAT           reduce using rule 4 (statement -> declaration .)
    BOOLEAN         reduce using rule 4 (statement -> declaration .)
    STRING          reduce using rule 4 (statement -> declaration .)
    RBRACE          reduce using rule 4 (statement -> declaration .)


state 6

    (5) statement -> assignment_expression . SEMICOLON

    SEMICOLON       shift and go to state 30


state 7

    (11) statement -> SEMICOLON .

    END             reduce using rule 11 (statement -> SEMICOLON .)
    SEMICOLON       reduce using rule 11 (statement -> SEMICOLON .)
    IDENTIFIER      reduce using rule 11 (statement -> SEMICOLON .)
    IF              reduce using rule 11 (statement -> SEMICOLON .)
    FOR             reduce using rule 11 (statement -> SEMICOLON .)
    GATE            reduce using rule 11 (statement -> SEMICOLON .)
    ONOFF           reduce using rule 11 (statement -> SEMICOLON .)
    PARK            reduce using rule 11 (statement -> SEMICOLON .)
    EXIT            reduce using rule 11 (statement -> SEMICOLON .)
    SENSOR          reduce using rule 11 (statement -> SEMICOLON .)
    RETURN          reduce using rule 11 (statement -> SEMICOLON .)
    PRINT           reduce using rule 11 (statement -> SEMICOLON .)
    INT             reduce using rule 11 (statement -> SEMICOLON .)
    FLOAT           reduce using rule 11 (statement -> SEMICOLON .)
    BOOLEAN         reduce using rule 11 (statement -> SEMICOLON .)
    STRING          reduce using rule 11 (statement -> SEMICOLON .)
    RBRACE          reduce using rule 11 (statement -> SEMICOLON .)


state 8

    (6) statement -> if_statement .

    END             reduce using rule 6 (statement -> if_statement .)
    SEMICOLON       reduce using rule 6 (statement -> if_statement .)
    IDENTIFIER      reduce using rule 6 (statement -> if_statement .)
    IF              reduce using rule 6 (statement -> if_statement .)
    FOR             reduce using rule 6 (statement -> if_statement .)
    GATE            reduce using rule 6 (statement -> if_statement .)
    ONOFF           reduce using rule 6 (statement -> if_statement .)
    PARK            reduce using rule 6 (statement -> if_statement .)
    EXIT            reduce using rule 6 (statement -> if_statement .)
    SENSOR          reduce using rule 6 (statement -> if_statement .)
    RETURN          reduce using rule 6 (statement -> if_statement .)
    PRINT           reduce using rule 6 (statement -> if_statement .)
    INT             reduce using rule 6 (statement -> if_statement .)
    FLOAT           reduce using rule 6 (statement -> if_statement .)
    BOOLEAN         reduce using rule 6 (statement -> if_statement .)
    STRING          reduce using rule 6 (statement -> if_statement .)
    RBRACE          reduce using rule 6 (statement -> if_statement .)


state 9

    (7) statement -> for_statement .

    END             reduce using rule 7 (statement -> for_statement .)
    SEMICOLON       reduce using rule 7 (statement -> for_statement .)
    IDENTIFIER      reduce using rule 7 (statement -> for_statement .)
    IF              reduce using rule 7 (statement -> for_statement .)
    FOR             reduce using rule 7 (statement -> for_statement .)
    GATE            reduce using rule 7 (statement -> for_statement .)
    ONOFF           reduce using rule 7 (statement -> for_statement .)
    PARK            reduce using rule 7 (statement -> for_statement .)
    EXIT            reduce using rule 7 (statement -> for_statement .)
    SENSOR          reduce using rule 7 (statement -> for_statement .)
    RETURN          reduce using rule 7 (statement -> for_statement .)
    PRINT           reduce using rule 7 (statement -> for_statement .)
    INT             reduce using rule 7 (statement -> for_statement .)
    FLOAT           reduce using rule 7 (statement -> for_statement .)
    BOOLEAN         reduce using rule 7 (statement -> for_statement .)
    STRING          reduce using rule 7 (statement -> for_statement .)
    RBRACE          reduce using rule 7 (statement -> for_statement .)


state 10

    (8) statement -> parking_command .

    END             reduce using rule 8 (statement -> parking_command .)
    SEMICOLON       reduce using rule 8 (statement -> parking_command .)
    IDENTIFIER      reduce using rule 8 (statement -> parking_command .)
    IF              reduce using rule 8 (statement -> parking_command .)
    FOR             reduce using rule 8 (statement -> parking_command .)
    GATE            reduce using rule 8 (statement -> parking_command .)
    ONOFF           reduce using rule 8 (statement -> parking_command .)
    PARK            reduce using rule 8 (statement -> parking_command .)
    EXIT            reduce using rule 8 (statement -> parking_command .)
    SENSOR          reduce using rule 8 (statement -> parking_command .)
    RETURN          reduce using rule 8 (statement -> parking_command .)
    PRINT           reduce using rule 8 (statement -> parking_command .)
    INT             reduce using rule 8 (statement -> parking_command .)
    FLOAT           reduce using rule 8 (statement -> parking_command .)
    BOOLEAN         reduce using rule 8 (statement -> parking_command .)
    STRING          reduce using rule 8 (statement -> parking_command .)
    RBRACE          reduce using rule 8 (statement -> parking_command .)


state 11

    (9) statement -> return_statement .

    END             reduce using rule 9 (statement -> return_statement .)
    SEMICOLON       reduce using rule 9 (statement -> return_statement .)
    IDENTIFIER      reduce using rule 9 (statement -> return_statement .)
    IF              reduce using rule 9 (statement -> return_statement .)
    FOR             reduce using rule 9 (statement -> return_statement .)
    GATE            reduce using rule 9 (statement -> return_statement .)
    ONOFF           reduce using rule 9 (statement -> return_statement .)
    PARK            reduce using rule 9 (statement -> return_statement .)
    EXIT            reduce using rule 9 (statement -> return_statement .)
    SENSOR          reduce using rule 9 (statement -> return_statement .)
    RETURN          reduce using rule 9 (statement -> return_statement .)
    PRINT           reduce using rule 9 (statement -> return_statement .)
    INT             reduce using rule 9 (statement -> return_statement .)
    FLOAT           reduce using rule 9 (statement -> return_statement .)
    BOOLEAN         reduce using rule 9 (statement -> return_statement .)
    STRING          reduce using rule 9 (statement -> return_statement .)
    RBRACE          reduce using rule 9 (statement -> return_statement .)


state 12

    (10) statement -> print_statement .

    END             reduce using rule 10 (statement -> print_statement .)
    SEMICOLON       reduce using rule 10 (statement -> print_statement .)
    IDENTIFIER      reduce using rule 10 (statement -> print_statement .)
    IF              reduce using rule 10 (statement -> print_statement .)
    FOR             reduce using rule 10 (statement -> print_statement .)
    GATE            reduce using rule 10 (statement -> print_statement .)
    ONOFF           reduce using rule 10 (statement -> print_statement .)
    PARK            reduce using rule 10 (statement -> print_statement .)
    EXIT            reduce using rule 10 (statement -> print_statement .)
    SENSOR          reduce using rule 10 (statement -> print_statement .)
    RETURN          reduce using rule 10 (statement -> print_statement .)
    PRINT           reduce using rule 10 (statement -> print_statement .)
    INT             reduce using rule 10 (statement -> print_statement .)
    FLOAT           reduce using rule 10 (statement -> print_statement .)
    BOOLEAN         reduce using rule 10 (statement -> print_statement .)
    STRING          reduce using rule 10 (statement -> print_statement .)
    RBRACE          reduce using rule 10 (statement -> print_statement .)


state 13

    (12) declaration -> type_specifier . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 31


state 14

    (17) assignment_expression -> IDENTIFIER . EQUALS expression

    EQUALS          shift and go to state 32


state 15

    (18) if_statement -> IF . LPAREN expression RPAREN compound_statement
    (19) if_statement -> IF . LPAREN expression RPAREN compound_statement ELSE compound_statement

    LPAREN          shift and go to state 33


state 16

    (20) for_statement -> FOR . LPAREN assignment_expression_opt expression_opt SEMICOLON assignment_expression_opt RPAREN compound_statement

    LPAREN          shift and go to state 34


state 17

    (26) parking_command -> GATE . OPEN SEMICOLON
    (27) parking_command -> GATE . CLOSE SEMICOLON

    OPEN            shift and go to state 35
    CLOSE           shift and go to state 36


state 18

    (28) parking_command -> ONOFF . SEMICOLON

    SEMICOLON       shift and go to state 37


state 19

    (29) parking_command -> PARK . SEMICOLON

    SEMICOLON       shift and go to state 38


state 20

    (30) parking_command -> EXIT . SEMICOLON

    SEMICOLON       shift and go to state 39


state 21

    (31) parking_command -> SENSOR . SEMICOLON

    SEMICOLON       shift and go to state 40


state 22

    (32) return_statement -> RETURN . expression SEMICOLON
    (34) expression -> . additive_expression
    (35) expression -> . relational_expression
    (36) expression -> . BOOLEAN_LITERAL
    (37) expression -> . STRING_LITERAL
    (45) additive_expression -> . multiplicative_expression
    (46) additive_expression -> . additive_expression PLUS multiplicative_expression
    (47) additive_expression -> . additive_expression MINUS multiplicative_expression
    (38) relational_expression -> . additive_expression relational_op additive_expression
    (48) multiplicative_expression -> . primary_expression
    (49) multiplicative_expression -> . multiplicative_expression TIMES primary_expression
    (50) multiplicative_expression -> . multiplicative_expression DIVIDE primary_expression
    (51) primary_expression -> . IDENTIFIER
    (52) primary_expression -> . NUMBER
    (53) primary_expression -> . FLOAT_NUMBER
    (54) primary_expression -> . BOOLEAN_LITERAL
    (55) primary_expression -> . STRING_LITERAL
    (56) primary_expression -> . LPAREN expression RPAREN

    BOOLEAN_LITERAL shift and go to state 44
    STRING_LITERAL  shift and go to state 45
    IDENTIFIER      shift and go to state 48
    NUMBER          shift and go to state 49
    FLOAT_NUMBER    shift and go to state 50
    LPAREN          shift and go to state 51

    expression                     shift and go to state 41
    additive_expression            shift and go to state 42
    relational_expression          shift and go to state 43
    multiplicative_expression      shift and go to state 46
    primary_expression             shift and go to state 47

state 23

    (33) print_statement -> PRINT . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 52


state 24

    (13) type_specifier -> INT .

    IDENTIFIER      reduce using rule 13 (type_specifier -> INT .)


state 25

    (14) type_specifier -> FLOAT .

    IDENTIFIER      reduce using rule 14 (type_specifier -> FLOAT .)


state 26

    (15) type_specifier -> BOOLEAN .

    IDENTIFIER      reduce using rule 15 (type_specifier -> BOOLEAN .)


state 27

    (16) type_specifier -> STRING .

    IDENTIFIER      reduce using rule 16 (type_specifier -> STRING .)


state 28

    (1) program -> BEGIN statement_list END .

    $end            reduce using rule 1 (program -> BEGIN statement_list END .)


state 29

    (2) statement_list -> statement_list statement .

    END             reduce using rule 2 (statement_list -> statement_list statement .)
    SEMICOLON       reduce using rule 2 (statement_list -> statement_list statement .)
    IDENTIFIER      reduce using rule 2 (statement_list -> statement_list statement .)
    IF              reduce using rule 2 (statement_list -> statement_list statement .)
    FOR             reduce using rule 2 (statement_list -> statement_list statement .)
    GATE            reduce using rule 2 (statement_list -> statement_list statement .)
    ONOFF           reduce using rule 2 (statement_list -> statement_list statement .)
    PARK            reduce using rule 2 (statement_list -> statement_list statement .)
    EXIT            reduce using rule 2 (statement_list -> statement_list statement .)
    SENSOR          reduce using rule 2 (statement_list -> statement_list statement .)
    RETURN          reduce using rule 2 (statement_list -> statement_list statement .)
    PRINT           reduce using rule 2 (statement_list -> statement_list statement .)
    INT             reduce using rule 2 (statement_list -> statement_list statement .)
    FLOAT           reduce using rule 2 (statement_list -> statement_list statement .)
    BOOLEAN         reduce using rule 2 (statement_list -> statement_list statement .)
    STRING          reduce using rule 2 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement_list statement .)


state 30

    (5) statement -> assignment_expression SEMICOLON .

    END             reduce using rule 5 (statement -> assignment_expression SEMICOLON .)
    SEMICOLON       reduce using rule 5 (statement -> assignment_expression SEMICOLON .)
    IDENTIFIER      reduce using rule 5 (statement -> assignment_expression SEMICOLON .)
    IF              reduce using rule 5 (statement -> assignment_expression SEMICOLON .)
    FOR             reduce using rule 5 (statement -> assignment_expression SEMICOLON .)
    GATE            reduce using rule 5 (statement -> assignment_expression SEMICOLON .)
    ONOFF           reduce using rule 5 (statement -> assignment_expression SEMICOLON .)
    PARK            reduce using rule 5 (statement -> assignment_expression SEMICOLON .)
    EXIT            reduce using rule 5 (statement -> assignment_expression SEMICOLON .)
    SENSOR          reduce using rule 5 (statement -> assignment_expression SEMICOLON .)
    RETURN          reduce using rule 5 (statement -> assignment_expression SEMICOLON .)
    PRINT           reduce using rule 5 (statement -> assignment_expression SEMICOLON .)
    INT             reduce using rule 5 (statement -> assignment_expression SEMICOLON .)
    FLOAT           reduce using rule 5 (statement -> assignment_expression SEMICOLON .)
    BOOLEAN         reduce using rule 5 (statement -> assignment_expression SEMICOLON .)
    STRING          reduce using rule 5 (statement -> assignment_expression SEMICOLON .)
    RBRACE          reduce using rule 5 (statement -> assignment_expression SEMICOLON .)


state 31

    (12) declaration -> type_specifier IDENTIFIER . SEMICOLON

    SEMICOLON       shift and go to state 53


state 32

    (17) assignment_expression -> IDENTIFIER EQUALS . expression
    (34) expression -> . additive_expression
    (35) expression -> . relational_expression
    (36) expression -> . BOOLEAN_LITERAL
    (37) expression -> . STRING_LITERAL
    (45) additive_expression -> . multiplicative_expression
    (46) additive_expression -> . additive_expression PLUS multiplicative_expression
    (47) additive_expression -> . additive_expression MINUS multiplicative_expression
    (38) relational_expression -> . additive_expression relational_op additive_expression
    (48) multiplicative_expression -> . primary_expression
    (49) multiplicative_expression -> . multiplicative_expression TIMES primary_expression
    (50) multiplicative_expression -> . multiplicative_expression DIVIDE primary_expression
    (51) primary_expression -> . IDENTIFIER
    (52) primary_expression -> . NUMBER
    (53) primary_expression -> . FLOAT_NUMBER
    (54) primary_expression -> . BOOLEAN_LITERAL
    (55) primary_expression -> . STRING_LITERAL
    (56) primary_expression -> . LPAREN expression RPAREN

    BOOLEAN_LITERAL shift and go to state 44
    STRING_LITERAL  shift and go to state 45
    IDENTIFIER      shift and go to state 48
    NUMBER          shift and go to state 49
    FLOAT_NUMBER    shift and go to state 50
    LPAREN          shift and go to state 51

    expression                     shift and go to state 54
    additive_expression            shift and go to state 42
    relational_expression          shift and go to state 43
    multiplicative_expression      shift and go to state 46
    primary_expression             shift and go to state 47

state 33

    (18) if_statement -> IF LPAREN . expression RPAREN compound_statement
    (19) if_statement -> IF LPAREN . expression RPAREN compound_statement ELSE compound_statement
    (34) expression -> . additive_expression
    (35) expression -> . relational_expression
    (36) expression -> . BOOLEAN_LITERAL
    (37) expression -> . STRING_LITERAL
    (45) additive_expression -> . multiplicative_expression
    (46) additive_expression -> . additive_expression PLUS multiplicative_expression
    (47) additive_expression -> . additive_expression MINUS multiplicative_expression
    (38) relational_expression -> . additive_expression relational_op additive_expression
    (48) multiplicative_expression -> . primary_expression
    (49) multiplicative_expression -> . multiplicative_expression TIMES primary_expression
    (50) multiplicative_expression -> . multiplicative_expression DIVIDE primary_expression
    (51) primary_expression -> . IDENTIFIER
    (52) primary_expression -> . NUMBER
    (53) primary_expression -> . FLOAT_NUMBER
    (54) primary_expression -> . BOOLEAN_LITERAL
    (55) primary_expression -> . STRING_LITERAL
    (56) primary_expression -> . LPAREN expression RPAREN

    BOOLEAN_LITERAL shift and go to state 44
    STRING_LITERAL  shift and go to state 45
    IDENTIFIER      shift and go to state 48
    NUMBER          shift and go to state 49
    FLOAT_NUMBER    shift and go to state 50
    LPAREN          shift and go to state 51

    expression                     shift and go to state 55
    additive_expression            shift and go to state 42
    relational_expression          shift and go to state 43
    multiplicative_expression      shift and go to state 46
    primary_expression             shift and go to state 47

state 34

    (20) for_statement -> FOR LPAREN . assignment_expression_opt expression_opt SEMICOLON assignment_expression_opt RPAREN compound_statement
    (23) assignment_expression_opt -> . assignment_expression
    (24) assignment_expression_opt -> . empty
    (17) assignment_expression -> . IDENTIFIER EQUALS expression
    (25) empty -> .

  ! shift/reduce conflict for IDENTIFIER resolved as shift
    IDENTIFIER      shift and go to state 14
    BOOLEAN_LITERAL reduce using rule 25 (empty -> .)
    STRING_LITERAL  reduce using rule 25 (empty -> .)
    NUMBER          reduce using rule 25 (empty -> .)
    FLOAT_NUMBER    reduce using rule 25 (empty -> .)
    LPAREN          reduce using rule 25 (empty -> .)
    SEMICOLON       reduce using rule 25 (empty -> .)

  ! IDENTIFIER      [ reduce using rule 25 (empty -> .) ]

    assignment_expression_opt      shift and go to state 56
    assignment_expression          shift and go to state 57
    empty                          shift and go to state 58

state 35

    (26) parking_command -> GATE OPEN . SEMICOLON

    SEMICOLON       shift and go to state 59


state 36

    (27) parking_command -> GATE CLOSE . SEMICOLON

    SEMICOLON       shift and go to state 60


state 37

    (28) parking_command -> ONOFF SEMICOLON .

    END             reduce using rule 28 (parking_command -> ONOFF SEMICOLON .)
    SEMICOLON       reduce using rule 28 (parking_command -> ONOFF SEMICOLON .)
    IDENTIFIER      reduce using rule 28 (parking_command -> ONOFF SEMICOLON .)
    IF              reduce using rule 28 (parking_command -> ONOFF SEMICOLON .)
    FOR             reduce using rule 28 (parking_command -> ONOFF SEMICOLON .)
    GATE            reduce using rule 28 (parking_command -> ONOFF SEMICOLON .)
    ONOFF           reduce using rule 28 (parking_command -> ONOFF SEMICOLON .)
    PARK            reduce using rule 28 (parking_command -> ONOFF SEMICOLON .)
    EXIT            reduce using rule 28 (parking_command -> ONOFF SEMICOLON .)
    SENSOR          reduce using rule 28 (parking_command -> ONOFF SEMICOLON .)
    RETURN          reduce using rule 28 (parking_command -> ONOFF SEMICOLON .)
    PRINT           reduce using rule 28 (parking_command -> ONOFF SEMICOLON .)
    INT             reduce using rule 28 (parking_command -> ONOFF SEMICOLON .)
    FLOAT           reduce using rule 28 (parking_command -> ONOFF SEMICOLON .)
    BOOLEAN         reduce using rule 28 (parking_command -> ONOFF SEMICOLON .)
    STRING          reduce using rule 28 (parking_command -> ONOFF SEMICOLON .)
    RBRACE          reduce using rule 28 (parking_command -> ONOFF SEMICOLON .)


state 38

    (29) parking_command -> PARK SEMICOLON .

    END             reduce using rule 29 (parking_command -> PARK SEMICOLON .)
    SEMICOLON       reduce using rule 29 (parking_command -> PARK SEMICOLON .)
    IDENTIFIER      reduce using rule 29 (parking_command -> PARK SEMICOLON .)
    IF              reduce using rule 29 (parking_command -> PARK SEMICOLON .)
    FOR             reduce using rule 29 (parking_command -> PARK SEMICOLON .)
    GATE            reduce using rule 29 (parking_command -> PARK SEMICOLON .)
    ONOFF           reduce using rule 29 (parking_command -> PARK SEMICOLON .)
    PARK            reduce using rule 29 (parking_command -> PARK SEMICOLON .)
    EXIT            reduce using rule 29 (parking_command -> PARK SEMICOLON .)
    SENSOR          reduce using rule 29 (parking_command -> PARK SEMICOLON .)
    RETURN          reduce using rule 29 (parking_command -> PARK SEMICOLON .)
    PRINT           reduce using rule 29 (parking_command -> PARK SEMICOLON .)
    INT             reduce using rule 29 (parking_command -> PARK SEMICOLON .)
    FLOAT           reduce using rule 29 (parking_command -> PARK SEMICOLON .)
    BOOLEAN         reduce using rule 29 (parking_command -> PARK SEMICOLON .)
    STRING          reduce using rule 29 (parking_command -> PARK SEMICOLON .)
    RBRACE          reduce using rule 29 (parking_command -> PARK SEMICOLON .)


state 39

    (30) parking_command -> EXIT SEMICOLON .
